--- a/controle-de-compras/index.html
+++ b/controle-de-compras/index.html
@@ -20,5 +20,6 @@
 	</nav>
 
 	<script type="text/javascript" src="js/config.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
