gerando a lista de compras automaticamente no index

--- a/controle-de-compras/index.html
+++ b/controle-de-compras/index.html
@@ -19,6 +19,14 @@
 		</div>
 	</nav>
 
+	<!-- lista de dados da compra -->
+	<div class="container-fluid">
+		<!-- tabela com a lista de itens para compra -->
+		<table id="listaTabela" class="table table-dark">
+		  
+		</table>	
+	</div>
+
 	<script type="text/javascript" src="js/config.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
