atualizando os dados da lista de compras

--- a/controle-de-compras/index.html
+++ b/controle-de-compras/index.html
@@ -35,8 +35,10 @@
 			<div class="form-group">
 				<input type="text" class="form-control" id="valor" name="valor" placeholder="Valor">
 			</div>
-			<!--  -->
+			<!-- Botões para Salvar ou Cancelar uma Atualização -->
 			<span id="btnAtualizacao" style="display: none;">
+				<!-- Span para Armazenar o Id -->
+				<span id="inputIdAtualizacao"></span>
 				<!-- Botão para Salvar -->
 			    <button onclick="salvarDados();" class="btn btn-primary">Salvar</button>
 			    <!-- Botão para Cancelar -->
