--- a/controle-de-compras/index.html
+++ b/controle-de-compras/index.html
@@ -57,6 +57,13 @@
 		</table>	
 	</div>
 
+	<!-- Total das Compras -->
+	<nav class="navbar navbar-dark bg-dark navbar-fixed-bottom">
+		<div class="container">
+			<h4 class="text-center text-success">Total: <span id="totalCompra">R$ 0,00</span></h4>
+		</div>
+	</nav>
+
 	<script type="text/javascript" src="js/config.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
